# sources

./: .gitignore  LICENSE-MIT  README.md  index.json  index.min.json
.github/workflows/: build.yaml  clippy.yaml  pr.yaml
sources/: en.mangabat-v6.aix  en.mangakakalot-v1.aix  en.manganato-v5.aix  en.manganelo-v1.aix  en.omegascans-v9.aix  en.weebcentral-v6.aix  ja.comicdays-v1.aix  ja.mangamura-v1.aix  ja.rawotaku-v1.aix  ja.shonenjumpplus-v1.aix  multi.mangadex-v9.aix
sources/en.mangabat/: Cargo.toml
sources/en.mangabat/res/: filters.json  source.json
sources/en.mangabat/src/: lib.rs
sources/en.mangakakalot/: Cargo.toml
sources/en.mangakakalot/res/: source.json
sources/en.mangakakalot/src/: lib.rs
sources/en.manganato/: Cargo.toml
sources/en.manganato/res/: source.json
sources/en.manganato/src/: lib.rs
sources/en.manganelo/: Cargo.toml
sources/en.manganelo/res/: source.json
sources/en.manganelo/src/: lib.rs
sources/en.omegascans/: Cargo.toml
sources/en.omegascans/res/: filters.json  source.json
sources/en.omegascans/src/: lib.rs  parser.rs
sources/en.weebcentral/: Cargo.toml
sources/en.weebcentral/res/: filters.json  source.json
sources/en.weebcentral/src/: filter.rs  helper.rs  lib.rs
sources/ja.comicdays/: Cargo.toml
sources/ja.comicdays/res/: settings.json  source.json
sources/ja.comicdays/src/: lib.rs
sources/ja.mangamura/: Cargo.toml
sources/ja.mangamura/res/: source.json
sources/ja.mangamura/src/: lib.rs
sources/ja.rawotaku/: Cargo.toml
sources/ja.rawotaku/res/: filters.json  source.json
sources/ja.rawotaku/src/: lib.rs
sources/ja.shonenjumpplus/: Cargo.toml
sources/ja.shonenjumpplus/res/: source.json
sources/ja.shonenjumpplus/src/: lib.rs
sources/multi.mangadex/: Cargo.toml
sources/multi.mangadex/res/: filters.json  settings.json  source.json
sources/multi.mangadex/scripts/: update_tags.py
sources/multi.mangadex/src/: auth.rs  home.rs  lib.rs  models.rs  settings.rs
templates/gigaviewer/: Cargo.toml
templates/gigaviewer/src/: auth.rs  imp.rs  lib.rs  models.rs  parser.rs
templates/mangabox/: Cargo.toml
templates/mangabox/src/: helper.rs  imp.rs  lib.rs
templates/mangareader/: Cargo.toml
templates/mangareader/src/: helper.rs  imp.rs  lib.rs  parser.rs
