[package]
name = "omegascans"
version = "0.1.0"
edition = "2021"

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", branch = "next", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.30", default-features = false, features = ["alloc"] }

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", branch = "next", features = ["test"] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git", branch = "next" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
