[package]
name = "mangadex"
version = "0.1.0"
edition = "2021"

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", branch = "next", version = "0.3.0", features = ["json"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.30", default-features = false, features = ["alloc"] }
hashbrown = "0.13.2"

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", branch = "next", features = ["test"] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git", branch = "next" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
